kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app: fastapi-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
