kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  rules:
    - host: kubernetes-nlb-devtest-036eaff424e8ef3f.elb.us-east-1.amazonaws.com
      http:
        paths:
        - path: /
          pathType: Exact
          backend:
            service:
              name: fastapi-service
              port:
                number: 80
